--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "request": "^2.88.0",
-    "rwv-sqlite": "git+https://github.com/kremio/rwv-sqlite-js.git",
+    "rwv-scraper-pipeline": "git+https://github.com/kremio/rwv-scraper-pipeline.git",
     "timezonecomplete": "^5.6.2"
   },
   "devDependencies": {
